@@ -3,7 +3,6 @@ package com.nhnacademy.orderpaymentrefund.controller.order;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -15,23 +14,19 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.nhnacademy.orderpaymentrefund.config.SecurityConfig;
 import com.nhnacademy.orderpaymentrefund.context.ClientHeaderContext;
 import com.nhnacademy.orderpaymentrefund.dto.order.request.FindNonClientOrderIdRequestDto;
-import com.nhnacademy.orderpaymentrefund.dto.order.request.FindNonClientOrderPasswordRequestDto;
 import com.nhnacademy.orderpaymentrefund.dto.order.request.NonClientOrderForm;
 import com.nhnacademy.orderpaymentrefund.dto.order.response.FindNonClientOrderIdInfoResponseDto;
 import com.nhnacademy.orderpaymentrefund.dto.order.response.NonClientOrderGetResponseDto;
 import com.nhnacademy.orderpaymentrefund.filter.HeaderFilter;
 import com.nhnacademy.orderpaymentrefund.service.order.impl.NonClientOrderServiceImpl;
-import java.util.Collections;
+import java.util.ArrayList;
+import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.Import;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.test.util.ReflectionTestUtils;
@@ -100,12 +95,13 @@ class NonClientOrderControllerTest {
 
         HttpHeaders headers = new HttpHeaders();
 
-        Long orderId=  1L;
+        Long orderId = 1L;
         String pwd = "비밀번호486";
 
         NonClientOrderGetResponseDto nonClientOrderGetResponseDto = new NonClientOrderGetResponseDto();
 
-        when(nonClientOrderService.getOrder(any(HttpHeaders.class), anyLong(), anyString())).thenReturn(nonClientOrderGetResponseDto);
+        when(nonClientOrderService.getOrder(any(HttpHeaders.class), anyLong(),
+            anyString())).thenReturn(nonClientOrderGetResponseDto);
 
         mockMvc.perform(
             get("/api/non-client/orders/{orderId}", orderId)
@@ -116,64 +112,44 @@ class NonClientOrderControllerTest {
     }
 
     @Test
-    @DisplayName("비회원 주문 아이디 찾기 페이지 테스트")
+    @DisplayName("비회원 주문 아이디 찾기 리스트 테스트")
     void findNonClientOrderIdTest() throws Exception {
 
         HttpHeaders headers = new HttpHeaders();
 
-        Page<FindNonClientOrderIdInfoResponseDto> orderPage = new PageImpl<>(
-            Collections.singletonList(FindNonClientOrderIdInfoResponseDto.builder().build())
-        );
+        List<FindNonClientOrderIdInfoResponseDto> orderList = new ArrayList<>(
+            List.of(FindNonClientOrderIdInfoResponseDto.builder().build()));
 
-        PageRequest expectedPageRequest = PageRequest.of(
-            0, // pageNo
-            10, // pageSize
-            Sort.by(Sort.Direction.ASC, "orderDatetime") // sortBy and sortDir
-        );
+        String ordererName = "홍길동";
+        String phoneNumber = "01012341234";
+        String email = "test@test.com";
+
+        FindNonClientOrderIdRequestDto requestDto = FindNonClientOrderIdRequestDto.builder()
+            .ordererName(ordererName)
+            .phoneNumber(phoneNumber)
+            .email(email)
+            .build();
 
         when(nonClientOrderService.findNonClientOrderId(
             any(HttpHeaders.class),
-            any(FindNonClientOrderIdRequestDto.class),
-            eq(expectedPageRequest) // Verify PageRequest
-        )).thenReturn(orderPage);
+            any(FindNonClientOrderIdRequestDto.class)
+        )).thenReturn(orderList);
+
+        String body = objectMapper.writeValueAsString(requestDto);
 
         mockMvc.perform(
-            get("/api/non-client/orders/find-orderId")
-                .param("pageSize", "10")
-                .param("pageNo", "0")
-                .param("sortBy", "orderDatetime")
-                .param("sortDir", "asc")
+            post("/api/non-client/orders/find-orderId")
                 .headers(headers)
+                .content(body)
+                .contentType(MediaType.APPLICATION_JSON)
         ).andExpect(status().isOk());
 
         verify(nonClientOrderService).findNonClientOrderId(
             any(HttpHeaders.class),
-            any(FindNonClientOrderIdRequestDto.class),
-            eq(expectedPageRequest) // Check the PageRequest argument
+            any(FindNonClientOrderIdRequestDto.class)
         );
 
     }
 
-    @Test
-    @DisplayName("비회원 주문 비밀번호 테스트")
-    void findNonClientOrderPasswordTest() throws Exception {
-
-        HttpHeaders headers = new HttpHeaders();
-
-        Long orderId = 1L;
-        String findPassword = "찾은 비밀번호";
-
-        when(nonClientOrderService.findNonClientOrderPassword(any(HttpHeaders.class), any(FindNonClientOrderPasswordRequestDto.class))).thenReturn(findPassword);
-
-        mockMvc.perform(
-            get("/api/non-client/orders/find-password")
-                .headers(headers)
-                .param("orderId", String.valueOf(orderId))
-                .param("ordererName", "홍길동")
-                .param("phoneNumber", "01012341234")
-                .param("email", "gildong@test.com")
-        ).andExpect(status().isOk());
-
-    }
 
 }
